--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,13 @@ platform = atmelavr
 framework = arduino
 board = digispark-tiny
 board_build.f_cpu = 8000000L
+build_flags = -flto
 debug_tool = simavr
 lib_deps = ${common.lib_deps_external}
 platform_packages =
-  framework-arduino-avr-digistump@https://github.com/ArminJo/DigistumpArduino/raw/master/framework-arduino-avr-digistump-1.7.1.zip
-  tool-micronucleus@https://github.com/ArminJo/DigistumpArduino/raw/master/tools/micronucleus-cli-2.5-pio-x86_64-mingw32.zip
+  framework-arduino-avr-digistump@https://github.com/ArminJo/DigistumpArduino/raw/master/framework-arduino-avr-digistump-1.7.5.zip
+  tool-micronucleus@https://github.com/ArminJo/DigistumpArduino/raw/master/tools/micronucleus-cli-2.6-pio-x86_64-mingw32.zip
+
 upload_protocol = custom
 upload_flags =
   --no-ansi
